# task_management

./: docker-compose.yml  pyproject.toml
task_manager/: docker-compose.yml
task_manager/taskmanager/taskmanager/templates/tasks/: _header.html  home.html
taskmanager/: db.sqlite3
taskmanager/taskmanager/: settings.py  urls.py
taskmanager/tasks/: admin.py  models.py  urls.py
taskmanager/tasks/migrations/: 0001_initial.py  0002_auto_20241029_0852.py
taskmanager/templates/tasks/: _footer.html  _header.html  about.html  base.html  home.html
