[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["petrushimself <tlhomedipetrus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.2"
psycopg = "^3.2.3"
django-storages = "^1.14.4"
django-widget-tweaks = "^1.5.0"
pillow = "^11.0.0"
django-redis = "^5.4.0"
django-csp = "^3.8"
django-ninja = "^1.3.0"
django-ratelimit = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
